GN works to build game_demo by adding a param '--std=C++17' to the compiling command.

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1,5 +1,13 @@
-executable("gn-demo") {
+executable("game_demo") {
     sources = [
-        "main.cpp"
-    ]
+        "//src/main.cpp",
+        "//src/Board.cpp",
+        "//src/Game.cpp",
+        ]
+    include_dirs = [ "//include" ]
+
+}
+
+config("game_static_config"){
+  include_dirs = [ "//include" ]
 }
